--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
   and I've gone ahead and color slurped the colors for you.
 
   Theme:
+  Primary - #f6f6f6
+  Secondary-100: #000000
+  Secondary-200: #696969
+  Secondary-300: #212121
 
 
   I'd like to see them used as variables as we may change them in
