--- a/style.css
+++ b/style.css
@@ -25,12 +25,45 @@
 
 */
 :root {
+  --Primary: #f6f6f6
+  --Secondary-100: #000000
+  --Secondary-200: #696969 
+  --Secondary-300: #212121 
   /* HINT: Your variables will need to go here so you can use them everywhere */
-}
+  }
 * {
   box-sizing: border-box;
+  background: #f6f6f6;
+}
+main{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 body {
   margin: 0;
   padding: 0;
+}
+.signup-form {
+  border-radius: 10px;
+  box-shadow: 2px 5px 5PX 10px;
+  
+}
+/*h1 {
+
+} */
+.signup-form__row {
+  padding: 1rem
+}
+
+input:hover{
+  background: blue;
+  color: #f6f6f6;
+}
+input {
+  display: flex;
+  color: blue;
+  font-size: xx-large;
 }
